<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="10dp"
            android:text="@string/enter_your_name" />

        <EditText
            android:id="@+id/etPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="10dp"
            android:text="@string/enter_the_game_name" />

        <EditText
            android:id="@+id/etGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvGameType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="10dp"
            android:text="@string/select_the_game_type" />

        <Spinner
            android:id="@+id/spGameType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGameTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingTop="10dp"
            android:text="@string/enter_the_game_time" />

        <EditText
            android:id="@+id/etGameTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_time"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCreate"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />

</LinearLayout>