<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_flag"
    tools:context=".activities.DashboardActivity">

    <Button
        android:id="@+id/btnCreateGame"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:text="@string/create_game"
        android:layout_marginTop="200dp"
        style="@style/button"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/btnJoinGame"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:text="@string/join_game"
        android:layout_marginTop="50dp"
        style="@style/button"
        app:layout_constraintBottom_toTopOf="@+id/btnConnectTag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateGame" />

    <Button
        android:id="@+id/btnConnectTag"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:text="@string/select_your_tag"
        android:layout_marginTop="50dp"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoinGame" />

</androidx.constraintlayout.widget.ConstraintLayout>