<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.JoinGameActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        style="@style/card"
        app:cardBackgroundColor="@color/lightGreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Game name"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvGameType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Game type"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvGameAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Game admin"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvGamePlayerCnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Game player count"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            style="@style/card"
            app:cardBackgroundColor="#E8A2A2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnJoinRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="40dp"
                    android:background="@color/redTeam"
                    android:text="@string/join_red"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnViewRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="40dp"
                    android:background="#99F8F5F5"
                    android:text="@string/view_players"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            style="@style/card"
            app:cardBackgroundColor="#9F9FEC">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnJoinBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="40dp"
                    android:background="@color/blueTeam"
                    android:text="@string/join_blue"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnViewBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="40dp"
                    android:background="#99F8F5F5"
                    android:text="@string/view_players"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/btnStartGame"
        style="@style/button"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/start_game" />

</LinearLayout>
